--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
+RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?$1 [L,QSA]
 RewriteRule ^(.*)$ https://budget.daniel-rudnik.profesjonalnyprogramista.pl//$1 [R,L]
